--- a/Site/css/main.css
+++ b/Site/css/main.css
@@ -3,7 +3,14 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    font-weight:bold 
 }
+.nameCategory{
+    font-family: Noto Sans, sans-serif;
+    font-weight:bold;
+    font-size:30px;
+}
+
 .Category{
     display: flex;
     flex-direction: row;
