--- a/Site/css/header.css
+++ b/Site/css/header.css
@@ -82,6 +82,7 @@
 .Search{
     width: 95%;
     padding: 10px;
+    background-color: rgb(252, 252, 228);
     border: 0px solid rgba(255, 255, 255, 0);
 }
 .SearchButton{
